# depot-sinjoh

./: .gitignore  CODEOWNERS  LICENSE  Makefile  README.html  README.md  configure.ac  mailx.code-workspace  renovate.json  requirements.txt  sinjohshell.sh  webdev.code-workspace
.github/workflows/: build_all.yml  c-cpp.yml  greetings.yml  label.yml  test-env.yml
chansasm/: chans_assembler.py
core/tools/binarycopierandsendertool/: Makefile  build.php
core/wlan/: AUTHORS.html  TODO.html
devenv/: pyvenv.cfg
devenv/Scripts/: Activate.ps1  activate  activate.bat
kernels/fullkernels/minna/: main.go
site/: .gitignore  Dockerfile  Dockerfile.configure_me  LICENSE  app.db  app.py  base.html  config-example.py  faq.html  forms.py  index.html  models.py  new-room.html  requirements.txt  rocketlauncher.py  services.html  styler.css
site/server/: app.py
site/styles/: borderapi.css  larsapi.css  paintjob.css  styler.css
site/templates/: base.html  bootstrap_wtf_but_with_recaptcha.html  index.html  new-room.html  services.html  signup.html
src/: AUTHORS.html  README  README.html  TODO.html  main.cpp  minna_main.go  seagull.a.cpp  seagull.cpp  seagull.hpp
src/cachedaemon/: update_webasm.go
src/conntest-dev/: main.go
src/conntest-test/: runner.go
src/cryptorangeserver/: api.php
src/csd/: addresses.go
src/forecast/: config.py  main.py  placeholder.py
src/gamestats2/: hashes.go
src/mailpy/: mail.py
src/newroom/: beacon.go  limited.go  paylink.go  related.go
src/smtp/: main.go
src/statusserver/: api.php
src/url2/: config.go  related.go
(+194 files in other folders)
