#!autoconf
AC_INIT([depot-sinjoh], [1.0], [kubuntuisbetterthanwindows@kubuntu-is-better-than-windows-fight-me.local])
AC_CHECK_HEADER([dearimgui.h],[AC_DEFINE([HAVE_DEARIMGUI], [1])]
AC_CHECK_HEADER([GL/gl.h], [AC_DEFINE([HAVE_OPENGL], [1])])
AC_CHECK_HEADER([Python.h], [AC_DEFINE([HAVE_CPYTHON], [1])])
AC_FUNC_STRNLEN()

